clusters/wauhost/weave-gitops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weave-gitops
  namespace: flux-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - flux.waushop.ee
      secretName: weave-gitops-tls
  rules:
    - host: flux.waushop.ee
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weave-gitops
                port:
                  number: 9001
